working on new ui styles

--- a/src/main/webapp/customer/template.xhtml
+++ b/src/main/webapp/customer/template.xhtml
@@ -194,7 +194,7 @@
                 <p:graphicImage value="/images/ajax-loader1.gif" />  
             </p:dialog>
 
-            <p:ajaxStatus onstart="PF('statusDialog').show();" onsuccess="statusDialog.hide();"/>
+            <p:ajaxStatus onstart="PF('statusDialog').show();" onsuccess="PF('statusDialog').hide();"/>
 
 
         </h:body>
