--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -84,7 +84,7 @@
                                 </span>
 
                                 <div class="panel-heading-controls">
-                                    <go:paginatorBtnsBt controllerMBean="#{clienteController}" update=":form"/>
+                                    <go:paginatorBtnsBt controllerMBean="#{clienteController}" update=":form0"/>
                                 </div>
                             </div>
                             <div class="panel-body no-padding">
