--- a/src/main/webapp/public/login.xhtml
+++ b/src/main/webapp/public/login.xhtml
@@ -106,7 +106,7 @@
                                          update=":form-signin" value="#{bundle.LoginUsuario}"
                                              styleClass="btn btn-primary btn-block btn-lg"
                                              onclick="jQuery(this).addClass('ui-state-disabled');
-                                                 jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                                                 jQuery(this).button('loading')">
                          </p:commandButton>
                          
 
