--- a/src/main/webapp/resources/go/casoListNoForm.xhtml
+++ b/src/main/webapp/resources/go/casoListNoForm.xhtml
@@ -36,7 +36,7 @@
                     <p:column headerText="" exportable="false">
                         <h:commandLink id="prio" disabled="#{(not item.open) or not (item.owner eq UserSessionBean.current)}">
                             <p:graphicImage library="images" name="#{item.esPrioritario ? 'star-enabled.png':'star-disabled.png'}" title="Prioritario"/>
-                            <p:ajax id="aj2" listener="#{casoController.changePriority(item, item.esPrioritario)}" update="prio :formTopMenu"/>
+                            <p:ajax id="aj2" listener="#{casoController.changePriority(item, item.esPrioritario)}" update="prio :main-navbar-form"/>
                         </h:commandLink>
                     </p:column>
 
@@ -52,7 +52,7 @@
                     <p:column sortBy="#{item.tema}" headerText="Asunto">
                         <h:panelGroup layout="block" >  
 
-                            <h:outputText styleClass="ticket-status" style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"/>
+                            <h:outputText styleClass="label" style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"/>
 
                             <p:commandLink id="temalink" action="#{casoController.prepareEditCaso(item.idCaso.toString())}" 
                                            ajax="false" style="color: #000" immediate="true">
