--- a/src/main/webapp/script/agenda.xhtml
+++ b/src/main/webapp/script/agenda.xhtml
@@ -7,12 +7,12 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <p:outputLabel value="#{filtroAcceso.hasAccessToViewAllCalendars() ? bundle.agendaTitle:'Mi agenda'}"/>
         </ui:define>
-        
-         <ui:define name="menutitle">
+
+        <ui:define name="menutitle">
             <p:outputLabel value="#{bundle.agendaMenuTitle}"/>
         </ui:define>
 
@@ -26,8 +26,28 @@
 
         </ui:define>
 
-        <ui:define name="west" id="west">
-            <h:form id="filterSchedule">
+ 
+
+        <ui:define name="body" id="body">
+
+            <!-- page-header -->
+            <div class="page-header">
+                <div class="row">
+                    <div class="col-sm-10 col-xs-10">
+                        <h1><i class="fa fa-calendar page-header-icon"></i>&nbsp;&nbsp;Agenda</h1>
+                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                            <i class="fa fa-info-circle"/>
+                        </p:commandLink> 
+                    </div>
+
+                </div>
+            </div><!-- / .page-header --> 
+
+
+            <div class="row">
+
+                <div class="col-md-3">
+<h:form id="filterSchedule">
                 <p:panelGrid columns="1" styleClass="filtersGrid" >
                     <p:row rendered="#{filtroAcceso.hasAccessToViewAllCalendars()}">
                         <p:column>
@@ -189,30 +209,32 @@
                     </p:row>
                 </p:panelGrid>
             </h:form>
-        </ui:define>
-
-        <ui:define name="body" id="body">
-
-                <div style="margin-top: 12px !important;">
-
-                    <h:panelGroup id="panel">
-
-                        <h:form id="formAgendarEvento">
-                            <p:schedule id="myschedule" value="#{globalScheduleController.lazyScheduleEventsModel}" 
-                                        aspectRatio="2"
-                                        firstHour="8" widgetVar="myschedule">
-                                <p:ajax event="dateSelect" listener="#{globalScheduleController.onDateSelect}" 
-                                        update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
-                                <p:ajax event="eventSelect" listener="#{globalScheduleController.onEventSelect}" 
-                                        update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
-
-                                <p:ajax event="eventMove" listener="#{globalScheduleController.onEventMove}" update=":mainform:messages" />  
-                                <p:ajax event="eventResize" listener="#{globalScheduleController.onEventResize}" update=":mainform:messages" /> 
-                            </p:schedule>
-                        </h:form>
-
-                    </h:panelGroup>
                 </div>
+
+                <div class="col-md-9">
+     <div style="margin-top: 12px !important;">
+
+                <h:panelGroup id="panel">
+
+                    <h:form id="formAgendarEvento">
+                        <p:schedule id="myschedule" value="#{globalScheduleController.lazyScheduleEventsModel}" 
+                                    aspectRatio="2"
+                                    firstHour="8" widgetVar="myschedule">
+                            <p:ajax event="dateSelect" listener="#{globalScheduleController.onDateSelect}" 
+                                    update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
+                            <p:ajax event="eventSelect" listener="#{globalScheduleController.onEventSelect}" 
+                                    update=":createEventForm:eventDetails" oncomplete="PF('createEventDialog').show()" />  
+
+                            <p:ajax event="eventMove" listener="#{globalScheduleController.onEventMove}" update=":mainform:messages" />  
+                            <p:ajax event="eventResize" listener="#{globalScheduleController.onEventResize}" update=":mainform:messages" /> 
+                        </p:schedule>
+                    </h:form>
+
+                </h:panelGroup>
+            </div>
+                </div>
+            </div>
+       
 
         </ui:define>
 
